--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </script>
   <br>
   <div class="ArtBoard">
-    <div class="item paper">
-    <div class="margin">
+    <div class="margin item">
+    <div class="item">
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
     </div>
     </div>
-    <div class="item paper">
-    <div class="margin">
+    <div class="margin item">
+    <div class="item">
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
     </div>
     </div>
