--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <br>
   <div class="ArtBoard">
     <div class="margin item">
-    <div class="item">
+    <div class="paper">
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
     </div>
     </div>
     <div class="margin item">
-    <div class="item">
+    <div class="paper">
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
     </div>
     </div>
