--- a/Blog.html
+++ b/Blog.html
@@ -11,7 +11,7 @@
   <title>The Meerkats Blog</title>
 </head>
 <body>
-  <div class="container"><img src="static/foreground.png" style="width: 100%" class="sketchBorder parallax"><h1 class="title">Blog</h1></div>
+  <div class="container"><img src="static/foreground.png" class="sketchBorder parallax"><h1 class="title">Blog</h1></div>
   <ul class="navbar">
     <a href="/"><li class="sketchBorder Tab">Home</li></a>
     <a href="shop.html"><li class="sketchBorder Tab">Shop</li></a>
