--- a/Photo.html
+++ b/Photo.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container"><img src="static/foreground.png" class="sketchBorder parallax"><h1 class="title">Photography</h1></div>
   <ul class="navbar">
-    <a href="/"><li class="sketchBorder Tab">Home</li></a>
+    <a href="index.html"><li class="sketchBorder Tab">Home</li></a>
     <a href="shop.html"><li class="sketchBorder Tab">Shop</li></a>
     <li class="sketchBorder Tab">Art</li>
     <a href="Photo.html"><li class="sketchBorder Tab">Photography</li></a>
