--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </ul>
   
   <br>
-  <div class="ArtBoard">
+  <div class="ArtBoard" id="ArtBoard">
     <div class="margin item">
     <div class="paper">
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
