--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   
   <br>
   <div class="ArtBoard" id="ArtBoard">
-    <div class="margin item">
+    <div class="margin item1">
     <div class="paper">
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
     </div>
     </div>
-    <div class="margin item">
+    <div class="margin item2">
     <div class="paper">
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
     </div>
