--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <img class="artImage" src="https://static.wikia.nocookie.net/villainsfanon/images/4/4e/Troll-Face-Meme-PNG.png">
     </div>
     </div>
+    <div class="margin item">
+    <div class="paper">
+    <img class="artImage" src="Art/TreeSketchScan.png">
+    </div>
+    </div>
   </div>
   
 </body>
