--- a/Art.html
+++ b/Art.html
@@ -1,8 +1,17 @@
 <head>
+  <!-- HTML Meta Tags -->
+  <title>The Meerkat's Projects</title>
+  <meta name="description" content="Art Portfolio">
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://shays.is-a.dev/The-Meerkats-Projects/Art.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="The Meerkat's Projects">
+  <meta property="og:description" content="Art Portfolio">
+  <meta property="og:image" content="https://shays.is-a.dev/The-Meerkats-Projects/static/og_image.png">
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Economica">
   <link rel="stylesheet" href="gallery.css">
-  <title>Art</title>
 </head>
 <body>
   <div class="container"><img src="static/foreground.png" class="sketchBorder parallax"><h1 class="title">Art</h1></div>
