--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <head>
+  <!-- HTML Meta Tags -->
+  <title>The Meerkats Projects</title>
+  <meta name="description" content="The Home Page">
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://shays.is-a.dev/The-Meerkats-Projects/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="The Meerkat's Projects">
+  <meta property="og:description" content="The Home Page">
+  <meta property="og:image" content="https://shays.is-a.dev/The-Meerkats-Projects/static/og_image.png">
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Economica">
