--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>The Meerkat's Projects</title>
+  <meta name="description" content="Cool Stuff You Can Have">
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://shays.is-a.dev/The-Meerkats-Projects/shop.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="The Meerkat's Projects">
+  <meta property="og:description" content="Cool Stuff You Can Have">
+  <meta property="og:image" content="https://shays.is-a.dev/The-Meerkats-Projects/static/og_image.png">
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="Shop.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Economica">
