--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <head>
   <!-- HTML Meta Tags -->
   <title>The Meerkats Projects</title>
-  <meta name="description" content="The Home Page">
+  <meta name="description" content="Direct From Their Workshop">
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://shays.is-a.dev/The-Meerkats-Projects/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="The Meerkat's Projects">
-  <meta property="og:description" content="The Home Page">
+  <meta property="og:description" content="Direct From Their Worksho">
   <meta property="og:image" content="https://shays.is-a.dev/The-Meerkats-Projects/static/og_image.png">
 
   <link rel="stylesheet" href="style.css">
