seo and favicon

--- a/Blog.html
+++ b/Blog.html
@@ -1,14 +1,26 @@
 <!doctype html>
 <html>
 <head>
+  <!-- HTML Meta Tags -->
+  <title>The Meerkats Projects</title>
+  <meta name="description" content="The Meerkat's Blog">
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://shays.is-a.dev/The-Meerkats-Projects/Blog.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="The Meerkat's Projects">
+  <meta property="og:description" content="The Meerkat's Blog">
+  <meta property="og:image" content="https://shays.is-a.dev/The-Meerkats-Projects/static/og_image.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/atom-one-dark.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="Blog.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Economica">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323">
-
+  
   <meta charset="utf-8"/>
-  <title>The Meerkats Blog</title>
 </head>
 <body>
   <div class="container"><img src="static/foreground.png" class="sketchBorder parallax"><h1 class="title">Blog</h1></div>
