--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta property="og:url" content="https://shays.is-a.dev/The-Meerkats-Projects/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="The Meerkat's Projects">
-  <meta property="og:description" content="Direct From Their Worksho">
+  <meta property="og:description" content="Direct From Their Workshop">
   <meta property="og:image" content="https://shays.is-a.dev/The-Meerkats-Projects/static/og_image.png">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Economica">
