--- a/Blog.html
+++ b/Blog.html
@@ -10,9 +10,9 @@
   <meta property="og:title" content="The Meerkat's Projects">
   <meta property="og:description" content="The Meerkat's Blog">
   <meta property="og:image" content="https://shays.is-a.dev/The-Meerkats-Projects/static/og_image.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/atom-one-dark.min.css">
   <link rel="stylesheet" href="style.css">
